syntax = "proto3";
import "google/protobuf/any.proto";

service UserService {
    rpc SyncUserOnSdm (ICreateUserOnSdmReq) returns (ICreateUserOnSdmRes) {}
    rpc SyncUserOnCms (ICreateUserOnCmsReq) returns (ICreateUserOnCmsRes) {}
    rpc FetchAddressById (IFetchAddressByIdReq) returns (IFetchAddressByIdRes) {}
}

message ICreateUserOnSdmReq { }

message ICreateUserOnSdmRes { }

message ICreateUserOnCmsReq {
    required IAction action = 1;
    required string aerospikeId = 2;
    required string lastname = 3;
    required string firstname = 4;
    required string email = 5;
    required int32 storeId = 6;
    required int32 websiteId = 7;
    required string password = 8;
    required int32 count = 9;
}

message IAction {
    optional bool create = 1;
    optional bool update = 2;
    optional bool name = 3;
    optional bool email = 4;
    optional bool phone = 5;
}

message ICreateUserOnCmsRes { }

message IFetchAddressByIdReq {
    required string userId = 1;
    required string addressId = 2;
}

message IFetchAddressByIdRes { 
    required string id = 1;
    required int32 sdmAddressRef = 2;
    required int32 cmsAddressRef = 3;
    required int32 areaId = 4;
    required int32 storeId = 5;
}